# matrx

./: CHANGELOG.md  README.md  matrx.cabal  neo.cabal
.github/workflows/: haskell.yml
src/Data/: IMatrix.hs  MMatrix.hs  Matrix.hs  NaiveMatrix.hs  Unboxed.hs
src/Data/Matrix/: Class.hs  Internal.hs  Mutable.hs
