cabal-version:      2.4
name:               neo
version:            0.0.0.1
synopsis:           Efficient matrix library
-- description:
homepage:           https://github.com/ih1d/neo
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Data.NaiveMatrix
        Data.Matrix
    other-modules:
        Data.IMatrix
        Data.MMatrix
 
    -- other-extensions:
       
    build-depends:    base ^>=4.15.1.0
                    , ghc-prim
    hs-source-dirs:   src
    default-language: Haskell2010
